--- a/.github/workflows/buildpw.yml
+++ b/.github/workflows/buildpw.yml
@@ -29,8 +29,7 @@ jobs:
           sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.org/init_build_environment.sh)'
 
       - name: Download
-        run: |
-          git clone --depth=1 https://github.com/hanwckf/immortalwrt-mt798x.git
+        run: git clone --depth=1 https://github.com/hanwckf/immortalwrt-mt798x.git
 
       - name: update
         run: |
@@ -50,12 +49,24 @@ jobs:
           git clone -b main --single-branch https://github.com/xiaorouji/openwrt-passwall-packages openwrt-passwall-packages
           rm -rf ./feeds/packages/net/chinadns-ng && mv ./openwrt-passwall-packages/chinadns-ng ./feeds/packages/net/chinadns-ng && rm -rf ./openwrt-passwall-packages
 
-      - name: build
+      - name: config
         run: |
           cd immortalwrt-mt798x
           sed -i 's/192.168.1.1/192.168.5.1/g' package/base-files/files/bin/config_generate
           cp -f $GITHUB_WORKSPACE/pw.config .config
-          make -j$(nproc)
+
+      - name: config
+        run: |
+          cd immortalwrt-mt798x
+          make defconfig
+          make download -j8
+          find dl -size -1024c -exec ls -l {} \;
+          find dl -size -1024c -exec rm -f {} \;
+
+      - name: Compile the firmware
+        run: |
+          cd immortalwrt-mt798x
+          make -j$(nproc) || make -j1 || make -j1 V=s
 
       - name: Upload
         uses: actions/upload-artifact@v2
