--- a/.github/workflows/buildpw.yml
+++ b/.github/workflows/buildpw.yml
@@ -55,7 +55,7 @@ jobs:
           sed -i 's/192.168.1.1/192.168.5.1/g' package/base-files/files/bin/config_generate
           cp -f $GITHUB_WORKSPACE/pw.config .config
 
-      - name: config
+      - name: package
         run: |
           cd immortalwrt-mt798x
           make defconfig
