--- a/.github/workflows/buildpw.yml
+++ b/.github/workflows/buildpw.yml
@@ -44,7 +44,7 @@ jobs:
       - name: passwall
         run: |
           cd immortalwrt-mt798x
-          git clone -b luci-smartdns-dev --single-branch https://github.com/xiaorouji/openwrt-passwall openwrt-passwall
+          git clone -b main --single-branch https://github.com/xiaorouji/openwrt-passwall openwrt-passwall
           rm -rf ./feeds/luci/applications/luci-app-passwall && mv ./openwrt-passwall/luci-app-passwall ./feeds/luci/applications/luci-app-passwall && rm -rf ./openwrt-passwall
           git clone -b main --single-branch https://github.com/xiaorouji/openwrt-passwall-packages openwrt-passwall-packages
           rm -rf ./feeds/packages/net/chinadns-ng && mv ./openwrt-passwall-packages/chinadns-ng ./feeds/packages/net/chinadns-ng && rm -rf ./openwrt-passwall-packages
