--- a/.github/workflows/buildpw2.yml
+++ b/.github/workflows/buildpw2.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           cd immortalwrt-mt798x
           sed -i 's/192.168.1.1/192.168.5.1/g' package/base-files/files/bin/config_generate
-          cp -f $GITHUB_WORKSPACE/pw.config .config
+          cp -f $GITHUB_WORKSPACE/pw2.config .config
 
       - name: package
         run: |
