--- a/.github/workflows/buildpw.yml
+++ b/.github/workflows/buildpw.yml
@@ -29,7 +29,8 @@ jobs:
           sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.org/init_build_environment.sh)'
 
       - name: Download
-        run: git clone --depth=1 https://github.com/hanwckf/immortalwrt-mt798x.git
+        run: |
+          git clone -b openwrt-21.02 --single-branch --filter=blob:none https://github.com/hanwckf/immortalwrt-mt798x.git
 
       - name: update
         run: |
@@ -52,8 +53,8 @@ jobs:
       - name: config
         run: |
           cd immortalwrt-mt798x
-          sed -i 's/192.168.1.1/192.168.5.1/g' package/base-files/files/bin/config_generate
-          cp -f $GITHUB_WORKSPACE/pw.config .config
+          sed -i 's/192.168.1.1/192.168.6.1/g' package/base-files/files/bin/config_generate
+          cp -f $GITHUB_WORKSPACE/minipwyilaiipt.config .config
 
       - name: package
         run: |
