--- a/.github/workflows/buildpw.yml
+++ b/.github/workflows/buildpw.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           cd immortalwrt-mt798x
           sed -i 's/192.168.1.1/192.168.6.1/g' package/base-files/files/bin/config_generate
-          cp -f $GITHUB_WORKSPACE/minipwyilaiipt.config .config
+          cp -f $GITHUB_WORKSPACE/pwmini.config .config
 
       - name: package
         run: |
