--- a/.github/workflows/buildpw.yml
+++ b/.github/workflows/buildpw.yml
@@ -118,7 +118,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: firmware
-          path: immortalwrt-mt798x/bin/targets/mediatek/mt7981/immortalwrt-mediatek-mt7981-mt7981-360-t7-108M-squashfs-sysupgrade.bin
+          path: immortalwrt-mt798x/bin/targets/mediatek/mt7981/*sysupgrade.bin
 
       - name: 删除工作流运行
         uses: GitRML/delete-workflow-runs@main
