--- a/.github/workflows/menuconfig.yml
+++ b/.github/workflows/menuconfig.yml
@@ -16,8 +16,10 @@ jobs:
 
       - name: Download
         run: |
-          git clone --depth=1 https://github.com/hanwckf/immortalwrt-mt798x.git
-          cd immortalwrt-mt798x
+          #git clone --depth=1 https://github.com/hanwckf/immortalwrt-mt798x.git
+          git clone --depth=1 https://github.com/padavanonly/immortalwrt-mt798x-24.10.git
+          #cd immortalwrt-mt798x
+          cd immortalwrt-mt798x-24.10
 
           git clone https://github.com/xiaorouji/openwrt-passwall.git package/passwall
           git clone https://github.com/xiaorouji/openwrt-passwall2.git package/passwall2
@@ -40,7 +42,8 @@ jobs:
 
       - name: config
         run: |
-          cd immortalwrt-mt798x
+          #cd immortalwrt-mt798x
+          cd immortalwrt-mt798x-24.10
           mv .config 360t7.config
 
       - name: Upload artifact
@@ -48,5 +51,7 @@ jobs:
         with:
           name: config
           path: |
-            immortalwrt-mt798x/360t7.config
-            360T7/immortalwrt-mt798x/360t7.config
+            #immortalwrt-mt798x/360t7.config
+            #360T7/immortalwrt-mt798x/360t7.config
+            immortalwrt-mt798x-24.10/360t7.config
+            360T7/immortalwrt-mt798x-24.10/360t7.config
