--- a/.github/workflows/menuconfig.yml
+++ b/.github/workflows/menuconfig.yml
@@ -16,16 +16,16 @@ jobs:
 
       - name: Download
         run: |
-          #git clone --depth=1 https://github.com/hanwckf/immortalwrt-mt798x.git
-          git clone --depth=1 https://github.com/padavanonly/immortalwrt-mt798x-24.10.git
-          #cd immortalwrt-mt798x
-          cd immortalwrt-mt798x-24.10
+          git clone --depth=1 https://github.com/hanwckf/immortalwrt-mt798x.git
+          #git clone --depth=1 https://github.com/padavanonly/immortalwrt-mt798x-24.10.git
+          cd immortalwrt-mt798x
+          #cd immortalwrt-mt798x-24.10
 
           git clone https://github.com/xiaorouji/openwrt-passwall.git package/passwall
-          git clone https://github.com/xiaorouji/openwrt-passwall2.git package/passwall2
+          #git clone https://github.com/xiaorouji/openwrt-passwall2.git package/passwall2
           git clone https://github.com/xiaorouji/openwrt-passwall-packages.git package/passwall-packages
           echo "src-git passwall https://github.com/xiaorouji/openwrt-passwall.git;main" >> "feeds.conf.default"
-          echo "src-git passwall2 https://github.com/xiaorouji/openwrt-passwall2.git;main" >> "feeds.conf.default"
+          #echo "src-git passwall2 https://github.com/xiaorouji/openwrt-passwall2.git;main" >> "feeds.conf.default"
           echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main" >> "feeds.conf.default"
           ./scripts/feeds update -a
           ./scripts/feeds install -a
@@ -42,8 +42,8 @@ jobs:
 
       - name: config
         run: |
-          #cd immortalwrt-mt798x
-          cd immortalwrt-mt798x-24.10
+          cd immortalwrt-mt798x
+          #cd immortalwrt-mt798x-24.10
           mv .config 360t7.config
 
       - name: Upload artifact
@@ -51,7 +51,7 @@ jobs:
         with:
           name: config
           path: |
-            #immortalwrt-mt798x/360t7.config
-            #360T7/immortalwrt-mt798x/360t7.config
-            immortalwrt-mt798x-24.10/360t7.config
-            360T7/immortalwrt-mt798x-24.10/360t7.config
+            immortalwrt-mt798x/360t7.config
+            360T7/immortalwrt-mt798x/360t7.config
+            #immortalwrt-mt798x-24.10/360t7.config
+            #360T7/immortalwrt-mt798x-24.10/360t7.config
