--- a/.github/workflows/hanwckf.yml
+++ b/.github/workflows/hanwckf.yml
@@ -5,13 +5,10 @@ on:
   workflow_dispatch:
 
 env:
-  #REPO_URL: https://github.com/hanwckf/immortalwrt-mt798x
-  REPO_URL: https://github.com/padavanonly/immortalwrt-mt798x-24.10
-  #REPO_BRANCH: openwrt-21.02
-  REPO_BRANCH: 2410
+  REPO_URL: https://github.com/hanwckf/immortalwrt-mt798x
+  REPO_BRANCH: openwrt-21.02
   FEEDS_CONF: feeds.conf.default
-  #CONFIG_FILE: ./config/hanwckf.config
-  CONFIG_FILE: ./config/padavanonly.config
+  CONFIG_FILE: ./config/hanwckf.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
