--- a/.github/workflows/padavanonly.yml
+++ b/.github/workflows/padavanonly.yml
@@ -1,16 +1,13 @@
-name: hanwckf
+name: padavanonly
 
 on:
   repository_dispatch:
   workflow_dispatch:
 
 env:
-  #REPO_URL: https://github.com/hanwckf/immortalwrt-mt798x
   REPO_URL: https://github.com/padavanonly/immortalwrt-mt798x-24.10
-  #REPO_BRANCH: openwrt-21.02
   REPO_BRANCH: 2410
   FEEDS_CONF: feeds.conf.default
-  #CONFIG_FILE: ./config/hanwckf.config
   CONFIG_FILE: ./config/padavanonly.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
