--- a/.github/workflows/menuconfig.yml
+++ b/.github/workflows/menuconfig.yml
@@ -25,8 +25,8 @@ jobs:
           #git clone https://github.com/xiaorouji/openwrt-passwall-packages.git package/passwall-packages
           echo "src-git passwall https://github.com/xiaorouji/openwrt-passwall.git;main" >> "feeds.conf.default"
           echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main" >> "feeds.conf.default"
-          echo "src-git homebox https://github.com/XGHeaven/homebox.git;master" >> "feeds.conf.default"
-          echo "src-git luci-app-homebox https://github.com/selfcan/luci-app-homebox.git;main" >> "feeds.conf.default"
+          #echo "src-git homebox https://github.com/XGHeaven/homebox.git;master" >> "feeds.conf.default"
+          #echo "src-git luci-app-homebox https://github.com/selfcan/luci-app-homebox.git;main" >> "feeds.conf.default"
           
           ./scripts/feeds update -a
           ./scripts/feeds install -a
