--- a/.github/workflows/menuconfig.yml
+++ b/.github/workflows/menuconfig.yml
@@ -21,10 +21,10 @@ jobs:
           cd immortalwrt-mt798x
           #cd immortalwrt-mt798x-24.10
 
-          #git clone https://github.com/xiaorouji/openwrt-passwall.git package/passwall
-          #git clone https://github.com/xiaorouji/openwrt-passwall-packages.git package/passwall-packages
-          echo "src-git passwall https://github.com/xiaorouji/openwrt-passwall.git;main" >> "feeds.conf.default"
-          echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main" >> "feeds.conf.default"
+          git clone https://github.com/xiaorouji/openwrt-passwall.git package/passwall
+          git clone https://github.com/xiaorouji/openwrt-passwall-packages.git package/passwall-packages
+          #echo "src-git passwall https://github.com/xiaorouji/openwrt-passwall.git;main" >> "feeds.conf.default"
+          #echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main" >> "feeds.conf.default"
           git clone https://github.com/XGHeaven/homebox package/homebox
           git clone https://github.com/selfcan/luci-app-homebox package/luci-app-homebox
           #echo "src-git homebox https://github.com/XGHeaven/homebox.git;master" >> "feeds.conf.default"
